[workspace]
members = [
    "crates/chat-prompts",
    "crates/endpoints",
    "crates/llama-core",
    "llama-api-server",
    "llama-chat",
    "llama-simple",
]
resolver = "2"

[workspace.dependencies]
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
endpoints        = { path = "crates/endpoints", version = "^0.26" }
chat-prompts     = { path = "crates/chat-prompts", version = "^0.29" }
thiserror        = "1"
uuid             = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap             = { version = "4.4.6", features = ["cargo", "derive"] }
log              = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger      = { version = "0.1.2", features = ["kv"] }
either           = "1.12.0"
base64           = "=0.22.1"
llama-core       = { path = "crates/llama-core", features = ["logging"], version = "^0.32" }
tokio            = { version = "^1.36", features = ["sync", "macros", "io-util", "fs", "net", "rt", "time"] }
anyhow           = "1"
once_cell        = "1.18"
wasmedge-wasi-nn = "0.8.0"
futures          = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
reqwest          = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper   = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio   = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
