[workspace]
members = ["llama-api-server", "chat-prompts", "endpoints", "llama-core"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
endpoints = { path = "endpoints", version = "^0.8" }
chat-prompts = { path = "chat-prompts", version = "^0.8" }
thiserror = "1"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
