[workspace]
members = ["llama-api-server", "chat-prompts", "endpoints", "llama-core"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
endpoints = { path = "endpoints", version = "^0.12" }
chat-prompts = { path = "chat-prompts", version = "^0.11" }
thiserror = "1"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }
either = "1.12.0"
base64 = "=0.22.0"
