[package]
name = "llama-chat"
version = "0.6.0"
edition = "2021"

[dependencies]
chat-prompts = { path = "../api-server/chat-prompts", version = "^0.5" }
endpoints = { path = "../api-server/endpoints", version = "^0.5" }
wasmedge-wasi-nn = "0.7.0"
clap = { version = "4.4.6", features = ["cargo"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
