[package]
name = "llama-chat"
version = "0.11.2"
edition = "2021"

[dependencies]
chat-prompts = { path = "../api-server/chat-prompts" }
endpoints = { path = "../api-server/endpoints" }
llama-core = { path = "../api-server/llama-core" }
wasmedge-wasi-nn = "0.7.0"
clap = { version = "4.4.6", features = ["cargo"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1.0"
tokio_wasi = { version = "1", features = ["full"] }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
