[package]
name = "llama-chat"
version = "0.14.1"
edition = "2021"

[dependencies]
chat-prompts = { path = "../api-server/chat-prompts" }
endpoints = { path = "../api-server/endpoints" }
llama-core = { path = "../api-server/llama-core" }
clap = { version = "4.4.6", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "^1.36", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
either = "1.12.0"

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
