[package]
name = "llama-api-server"
version = "0.14.15"
edition = "2021"

[dependencies]
llama-core.workspace = true
endpoints.workspace = true
chat-prompts.workspace = true
serde.workspace = true
serde_json.workspace = true
hyper = { version = "0.14", features = ["full"] }
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
clap.workspace = true
once_cell.workspace = true
mime_guess = "2.0.4"
futures-util = "0.3"
anyhow.workspace = true
multipart-2021 = "0.19.0"
wasi-logger.workspace = true
log.workspace = true
either.workspace = true

[features]
default = []
