[package]
name = "llama-chat"
version = "0.14.15"
edition = "2021"

[dependencies]
chat-prompts.workspace = true
endpoints.workspace = true
llama-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
either.workspace = true
