[package]
name = "llama-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "ggml" }
chat-prompts = { path = "../api-server/chat-prompts" }
endpoints = { path = "../api-server/endpoints" }
clap = "4.4.6"
once_cell = "1.18"
