[package]
name = "llama-simple"
version = "0.2.8"
edition = "2021"

[dependencies]
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "ggml" }
chat-prompts = { path = "../api-server/chat-prompts" }
endpoints = { path = "../api-server/endpoints" }
clap = { version = "4.4.6", features = ["cargo"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
