[package]
name = "llama-simple"
version = "0.8.6"
edition = "2021"

[dependencies]
wasmedge-wasi-nn = "0.7.0"
chat-prompts = { path = "../api-server/chat-prompts" }
endpoints = { path = "../api-server/endpoints" }
clap = { version = "4.4.6", features = ["cargo"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
