[package]
name = "chat-prompts"
version = "0.5.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/second-state/llama-utils"
license = "Apache-2.0"
documentation = "https://docs.rs/chat-prompts/"
categories = ["data-structures"]
description = "Chat prompt template"

[dependencies]
endpoints.workspace = true
thiserror.workspace = true
enum_dispatch = "0.3.12"
