[package]
name = "chat-prompts"
version = "0.5.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/LlamaEdge/LlamaEdge"
license = "Apache-2.0"
documentation = "https://docs.rs/chat-prompts/"
categories = ["data-structures"]
description = "Chat prompt template"

[dependencies]
endpoints.workspace = true
thiserror.workspace = true
enum_dispatch = "0.3.12"
