[package]
name = "endpoints"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/second-state/llama-utils"
license = "Apache-2.0"
documentation = "https://docs.rs/endpoints/"
categories = ["data-structures"]
description = "A collection of data structures for the OpenAI-compatible endpoints."

[dependencies]
serde.workspace = true
