[package]
name = "endpoints"
version = "0.13.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/LlamaEdge/LlamaEdge"
license = "Apache-2.0"
documentation = "https://docs.rs/endpoints/"
categories = ["data-structures"]
description = "A collection of data structures for the OpenAI-compatible endpoints."

[dependencies]
serde.workspace = true
url = "2.5"
indexmap = { version = "^2.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
