[package]
name = "llama-api-server"
version = "0.11.3"
edition = "2021"

[dependencies]
llama-core = { path = "../llama-core" }
futures = { version = "0.3.6", default-features = false, features = [
    "async-await",
    "std",
] }
serde.workspace = true
serde_json = "1.0"
endpoints.workspace = true
chat-prompts.workspace = true
serde_yaml = "0.9"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
thiserror.workspace = true
uuid.workspace = true
clap.workspace = true
once_cell = "1.18"
mime_guess = "2.0.4"
futures-util = "0.3"
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
wasi-logger = { workspace = true, optional = true }
env_logger = { version = "0.11", optional = true }
chrono = { version = "0.4", optional = true }
log.workspace = true

[features]
# default = ["default-logger"]
default = ["_env_logger"]
default-logger = ["_wasi_logger"]
_wasi_logger = ["wasi-logger", "llama-core/logging"]
_env_logger = ["env_logger", "chrono", "llama-core/logging"]
full = ["https"]
https = ["llama-core/https"]
