[package]
name = "llama-api-server"
version = "0.13.2"
edition = "2021"

[dependencies]
llama-core = { path = "../llama-core", features = ["logging"] }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
serde.workspace = true
serde_json.workspace = true
endpoints.workspace = true
chat-prompts.workspace = true
serde_yaml = "0.9"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
thiserror.workspace = true
uuid.workspace = true
clap.workspace = true
once_cell = "1.18"
mime_guess = "2.0.4"
futures-util = "0.3"
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
wasi-logger.workspace = true
log.workspace = true
either.workspace = true
walkdir = "2.5.0"

[features]
default = []
full = ["https"]
https = ["llama-core/https"]
