[package]
name = "llama-api-server"
version = "0.14.0"
edition = "2021"

[dependencies]
llama-core = { path = "../llama-core", features = ["logging"] }
endpoints.workspace = true
chat-prompts.workspace = true
serde.workspace = true
serde_json.workspace = true
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "^1.36", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
thiserror.workspace = true
uuid.workspace = true
clap.workspace = true
once_cell = "1.18"
mime_guess = "2.0.4"
futures-util = "0.3"
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
wasi-logger.workspace = true
log.workspace = true
either.workspace = true
walkdir = "2.5.0"

[features]
default = []
