[package]
name = "llm-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = [
    "async-await",
] }
# serde = { version = "1.0", features = ["derive"] }
serde.workspace = true
serde_json = "1.0"
# xin = { path = "xin", version = "0.1" }
xin.workspace = true
# prompt = { path = "prompt", version = "0.1" }
prompt.workspace = true
serde_yaml = "0.9"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
wasmedge_hyper_rustls = "0.1.0"
wasmedge_rustls_api = { version = "0.1.0", features = ["tokio_async"] }
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "dm4/ggml" }
