[package]
name = "llm-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = [
    "async-await",
] }
serde.workspace = true
serde_json = "1.0"
xin.workspace = true
prompt.workspace = true
serde_yaml = "0.9"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "dm4/ggml" }
thiserror.workspace = true
