[package]
name = "llama-core"
version = "0.18.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/LlamaEdge/LlamaEdge"
license = "Apache-2.0"
documentation = "https://llamaedge.github.io/LlamaEdge/llama_core/index.html"
categories = ["wasm", "science"]
description = "The core library of LlamaEdge"

[dependencies]
endpoints.workspace = true
chat-prompts.workspace = true
wasmedge-wasi-nn.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
once_cell.workspace = true
futures.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
qdrant = { package = "qdrant_rest_client", version = "0.1.1" }
text-splitter = { version = "^0.7", features = ["tiktoken-rs", "markdown"] }
tiktoken-rs = "^0.5"
wasi-logger = { workspace = true, optional = true }
log = { workspace = true, optional = true }
regex = "1"
either.workspace = true
wasmedge_stable_diffusion = { version = "=0.3.0" }
base64.workspace = true

[package.metadata.cargo-machete]
ignored = ["wasi-logger"]

[features]
default = []
full = ["logging", "search"]
logging = ["wasi-logger", "log"]
search = []
